# sante-publique-france-off-enhancer

./: .gitignore  LICENSE  README.md  conf.py  data_frame_field.py  index.rst  main.py  pyproject.toml  requirements.txt
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebook/: Untitled0.ipynb  open_food_fact_filtering.ipynb
src/: cleaning_filtering_features_products.py  identify_process_abnormal_values.py  identify_process_missing_values.py
src/classes/: bounds.py  na_count.py
src/sante_publique_france_off_enhancer/: cleaning_filtering_features_products.py  file_loading.py  identify_process_abnormal_values.py  identify_process_missing_values.py  main.py
src/sante_publique_france_off_enhancer/classes/: dataframe_field.py  na_count.py  nutrition_facts.py  singleton_logger.py  singleton_spark_session.py
