[tool.poetry]
name = "sante-publique-france-off-enhancer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
scipy = "^1.13.0"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"
pydantic = "^2.7.1"
pyspark = "^3.5.1"
setuptools = "^69.5.1"
mpld3 = "^0.5.10"

[tool.poetry.group.dev.dependencies]
missingno = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
